[package]
name = "ranza_guessing_game"
version = "0.1.0"
edition = "2024"
description = "A fun game where you guess what number the computer has chosen."
license = "MIT OR Apache-2.0"
authors = ["Naveed Anwar <ranzatechusa@gmail.com>"]
homepage = "https://ranzatech.com"
repository = "https://github.com/ranzatechusa/ranza_guessing_game"

[dependencies]
